--- a/app/src/main/res/drawable/custom_spinner_background.xml
+++ b/app/src/main/res/drawable/custom_spinner_background.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="4dp"></corners>
-    <stroke android:color="#cccccc" android:width="1dp"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+            <corners android:radius="4dp" />
+            <stroke
+                android:width="1dp"
+                android:color="#ff5252" />
+        </shape>
+    </item>
+    <item>
+        <bitmap
+            android:gravity="right"
+            android:src="@drawable/arrow_32_2"/>
+    </item>
+</layer-list>
