--- a/app/src/main/res/drawable/edit_text_style.xml
+++ b/app/src/main/res/drawable/edit_text_style.xml
@@ -5,10 +5,7 @@
 
     <solid android:color="#FFFFFF" />
 
-    <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp" />
+    <corners android:radius="4dp"/>
+    <stroke android:color="#ff5252" android:width="1dp"/>
 
 </shape>
