--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -7,78 +7,54 @@
 
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/backgrad">
-
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:contentDescription="desc_firebase_lockup"
-            android:layout_marginTop="76dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginStart="25dp"
-            android:layout_below="@+id/status"
-            android:layout_alignLeft="@+id/field_phone_number"
-            android:layout_alignStart="@+id/field_phone_number" />
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@+id/icon"
-            android:layout_toRightOf="@+id/icon"
-            />
-
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="phone_title_text"
-            android:visibility="gone"
-            android:layout_alignBaseline="@+id/detail"
-            android:layout_alignBottom="@+id/detail"
-            android:layout_toLeftOf="@+id/icon"
-            android:layout_toStartOf="@+id/icon" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/status"
-            android:text="signed_out"
-            android:visibility="gone"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/detail"
-            android:visibility="gone"
-            android:layout_below="@+id/button_verify_phone"
-            android:layout_toLeftOf="@+id/title_text"
-            android:layout_toStartOf="@+id/title_text"
-            android:layout_marginRight="78dp"
-            android:layout_marginEnd="78dp"
-            android:layout_marginTop="52dp" />
-
+        android:background="@drawable/backgrad"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <EditText
-            android:id="@+id/field_phone_number"
+            android:id="@+id/field_name"
             android:layout_width="220dp"
             android:layout_height="40dp"
             android:background="#90cecece"
             android:paddingRight="15dp"
             android:paddingLeft="15dp"
-            android:layout_centerHorizontal="true"
-            android:hint="        Phone Number  "
+            android:hint="Name"
             android:inputType="phone"
             android:textColor="#545454"
             android:textColorHint="#545454"
             android:textSize="12dp"
-            android:layout_marginTop="73dp"
-            android:layout_below="@+id/icon"
+            />
+        <EditText
+            android:id="@+id/field_phone"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:background="#90cecece"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
+            android:hint="Phone Number"
+            android:inputType="phone"
+            android:textColor="#545454"
+            android:textColorHint="#545454"
+            android:textSize="12dp"
+            />
+
+        <EditText
+            android:id="@+id/field_password"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:background="#90cecece"
+            android:layout_marginTop="10dp"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColor="#545454"
+            android:textColorHint="#545454"
+            android:textSize="12dp"
             />
 
         <EditText
@@ -88,20 +64,16 @@
             android:background="#90cecece"
             android:paddingRight="15dp"
             android:paddingLeft="15dp"
-            android:layout_centerHorizontal="true"
             android:hint="        Enter OTP "
             android:textSize="12dp"
             android:textColor="#545454"
             android:textColorHint="#545454"
-
             android:visibility="gone"
             android:inputType="number"
             android:layout_marginTop="24dp"
-            android:layout_below="@+id/field_phone_number"
             />
 
         <Button
-
             android:id="@+id/button_start_verification"
             android:layout_width="140dp"
             android:layout_height="50dp"
@@ -111,10 +83,7 @@
             android:textSize="15dp"
             android:text="next"
             android:background="@drawable/background_adult"
-            android:layout_marginTop="47dp"
-            android:layout_below="@+id/field_verification_code"
-            android:layout_centerHorizontal="true" />
-
+            android:layout_marginTop="47dp"/>
         <Button
 
             android:id="@+id/button_verify_phone"
@@ -126,11 +95,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="15dp"
             android:text="verify otp"
-            android:visibility="gone"
-            android:layout_alignBaseline="@+id/button_start_verification"
-            android:layout_alignBottom="@+id/button_start_verification"
-            android:layout_alignLeft="@+id/button_start_verification"
-            android:layout_alignStart="@+id/button_start_verification" />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button_resend"
@@ -138,33 +103,14 @@
             android:layout_height="50dp"
             android:padding="10dp"
             android:textColor="#ffffff"
-
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="15dp"
             android:visibility="gone"
             android:text="resend otp"
             android:background="@drawable/background_adult"
-            android:layout_marginTop="30dp"
-
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/button_start_verification" />
+            android:layout_marginTop="30dp" />
 
 
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:padding="10dp"
-            android:textColor="#ffffff"
-            android:visibility="gone"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="15dp"
-            android:text="sign_out"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/button_verify_phone"
-            android:layout_alignStart="@+id/button_verify_phone" />
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
