--- a/app/src/main/res/layout/activity_phone_authentication.xml
+++ b/app/src/main/res/layout/activity_phone_authentication.xml
@@ -63,19 +63,8 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="40dp"
                 android:paddingEnd="40dp"
-
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="@string/verify_note"
-                    android:textSize="14sp"
-                    android:id="@+id/firstText"
-                    android:paddingTop="18dp"
-                    android:layout_marginBottom="20dp"
-                    />
                 <!--
                                 <com.rilixtech.CountryCodePicker
                                     android:id="@+id/ccp"
@@ -90,6 +79,16 @@
                                     />
 
                 -->
+                <EditText
+                    android:id="@+id/field_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Name"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="textPersonName"
+                    android:background="@drawable/corner_white_border"
+                    />
                 <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/phone_number"
                     android:layout_width="match_parent"
@@ -98,10 +97,19 @@
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:textColorHint="@color/white"
-                    android:background="@null"
+                    android:background="@drawable/corner_white_border"
                     android:inputType="phone"/>
 
-
+                <EditText
+                    android:id="@+id/field_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="textPassword"
+                    android:background="@drawable/corner_white_border"
+                    />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -138,7 +146,7 @@
         android:background="@drawable/gradiennt1"
         android:id="@+id/inputCodeLayout"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentLeft="true">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -161,6 +169,7 @@
             android:paddingTop="18dp"
             android:layout_marginBottom="20dp"
             />
+        <!--
         <com.goodiebag.pinview.Pinview
             android:id="@+id/sms_code"
             android:layout_width="match_parent"
@@ -173,6 +182,14 @@
             app:hint="0"
             app:inputType="number"
             app:password="false"/>
+            -->
+        <EditText
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/sms_code"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:background="@drawable/corner_white_border"/>
 
         <TextView
             android:layout_width="match_parent"
