--- a/app/src/main/res/layout/pill_card_layout.xml
+++ b/app/src/main/res/layout/pill_card_layout.xml
@@ -8,9 +8,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="2dp">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
