--- a/app/src/main/res/drawable/custom_spinner_background.xml
+++ b/app/src/main/res/drawable/custom_spinner_background.xml
@@ -13,6 +13,7 @@
     <item>
         <bitmap
             android:gravity="right"
-            android:src="@drawable/arrow_32_2"/>
+            android:src="@drawable/arrow_24"
+            />
     </item>
 </layer-list>
