--- a/app/src/main/res/layout/activity_hospital_details.xml
+++ b/app/src/main/res/layout/activity_hospital_details.xml
@@ -5,22 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.user.surokkha.activities.FindDoctor">
+    android:paddingBottom="20dp"
+    tools:context=".activities.HospitalDetails">
 
-<include layout="@layout/toolbar_layout"/>
+    <include layout="@layout/toolbar_layout" />
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-<include layout="@layout/content_find_doctor"/>
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_viw"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/nav_menu" />
+        android:paddingBottom="20dp">
+
+       <include layout="@layout/content_hospital_details"/>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_viw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/nav_menu" />
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
