--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     tools:context="com.example.user.surokkha.activities.MainActivity">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -95,7 +97,16 @@
             android:layout_height="wrap_content"
             android:text="Verify"
             android:onClick="phoneAuth"/>
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:onClick="home"
+            />
 
     </LinearLayout>
+
+</ScrollView>
 
 </android.support.constraint.ConstraintLayout>
