--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -1,114 +1,185 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/layoutSuccess"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tvSuccess"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Login Successful!"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutMain"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/backgrad"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:background="@drawable/gradiennt1"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            android:text="Login With Mobile Number"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
         <EditText
             android:id="@+id/field_name"
             android:layout_width="220dp"
             android:layout_height="40dp"
-            android:background="#90cecece"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/corner_white_border"
             android:hint="Name"
-            android:inputType="phone"
-            android:textColor="#545454"
-            android:textColorHint="#545454"
-            android:textSize="12dp"
-            />
+            android:inputType="textPersonName"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="12sp" />
+
         <EditText
-            android:id="@+id/field_phone"
+            android:id="@+id/field_phone_number"
             android:layout_width="220dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:background="#90cecece"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/corner_white_border"
             android:hint="Phone Number"
             android:inputType="phone"
-            android:textColor="#545454"
-            android:textColorHint="#545454"
-            android:textSize="12dp"
-            />
-
-        <EditText
-            android:id="@+id/field_password"
-            android:layout_width="220dp"
-            android:layout_height="40dp"
-            android:background="#90cecece"
-            android:layout_marginTop="10dp"
-            android:paddingRight="15dp"
             android:paddingLeft="15dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="#545454"
-            android:textColorHint="#545454"
-            android:textSize="12dp"
-            />
-
-        <EditText
-            android:id="@+id/field_verification_code"
-            android:layout_width="220dp"
-            android:layout_height="40dp"
-            android:background="#90cecece"
             android:paddingRight="15dp"
-            android:paddingLeft="15dp"
-            android:hint="        Enter OTP "
-            android:textSize="12dp"
-            android:textColor="#545454"
-            android:textColorHint="#545454"
-            android:visibility="gone"
-            android:inputType="number"
-            android:layout_marginTop="24dp"
-            />
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="12sp" />
 
         <Button
             android:id="@+id/button_start_verification"
             android:layout_width="140dp"
             android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/corner_white_border"
             android:padding="10dp"
-            android:textColor="#ffffff"
+            android:text="Login"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="15dp"
-            android:text="next"
-            android:background="@drawable/background_adult"
-            android:layout_marginTop="47dp"/>
-        <Button
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
 
+        <TextView
+            android:id="@+id/tvVC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            android:text="Verification Code"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvPTVC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="Please type the verification code sent to your mobile"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/field_verification_code"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/corner_white_border"
+            android:hint="Enter Code"
+            android:inputType="number"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <Button
             android:id="@+id/button_verify_phone"
             android:layout_width="140dp"
             android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/corner_white_border"
             android:padding="10dp"
-            android:textColor="#ffffff"
-            android:background="@drawable/background_adult"
+            android:text="Verify"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="15dp"
-            android:text="verify otp"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvDRC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:text="Didn't receive the code?"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/timerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please wait: "
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#f5ea3d"
+                android:textSize="12sp"
+                tools:text="0:30 " />
+        </LinearLayout>
 
         <Button
             android:id="@+id/button_resend"
             android:layout_width="140dp"
             android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/corner_white_border"
             android:padding="10dp"
-            android:textColor="#ffffff"
+            android:text="Resend Code"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="15dp"
-            android:visibility="gone"
-            android:text="resend otp"
-            android:background="@drawable/background_adult"
-            android:layout_marginTop="30dp" />
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:visibility="gone" />
 
 
     </LinearLayout>
