--- a/app/src/main/res/layout/activity_show_appointment.xml
+++ b/app/src/main/res/layout/activity_show_appointment.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -25,7 +25,17 @@
                 android:id="@+id/rvAppointment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </LinearLayout>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabAppointment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="16dp"
+                android:onClick="fabBtn"
+                android:src="@drawable/ic_alarm_on_white_24dp" />
+        </RelativeLayout>
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navigation_viw"
