--- a/app/src/main/res/layout/activity_show_doctor.xml
+++ b/app/src/main/res/layout/activity_show_doctor.xml
@@ -14,10 +14,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_doctor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/emptyDoctors"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="20dp"
+                android:text="No Doctor available right now, Please visit www.odoctor24.com for available Doctors"
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone"
+                android:textSize="18sp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_doctor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navigation_viw"
