--- a/app/src/main/res/layout/activity_show_hospital.xml
+++ b/app/src/main/res/layout/activity_show_hospital.xml
@@ -12,6 +12,16 @@
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/emptyHospital"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="No Hospital available right now, Please visit www.odoctor24.com for available Hospitals"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimary"
+            android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_hospital"
