--- a/app/src/main/res/layout/activity_show_note.xml
+++ b/app/src/main/res/layout/activity_show_note.xml
@@ -6,15 +6,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.user.surokkha.activities.ShowNote">
+
     <include layout="@layout/toolbar_layout" />
+
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_note"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabNote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="16dp"
+                android:onClick="fabBtn"
+                android:src="@drawable/ic_alarm_on_white_24dp" />
+
+        </RelativeLayout>
+
         <android.support.design.widget.NavigationView
             android:id="@+id/navigation_viw"
             android:layout_width="match_parent"
